CMakeLists.txt: install cbindgen

--- a/xxffi/CMakeLists.txt
+++ b/xxffi/CMakeLists.txt
@@ -12,9 +12,17 @@ set(SRC_LIB_PATH "${SRC_LIB_DIR}/${LIB_NAME}")
 set(DST_LIB_DIR ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DIR})
 set(DST_LIB_PATH "${DST_LIB_DIR}/${LIB_NAME}")
 
+add_custom_command(
+    OUTPUT install-cbindgen
+    PRE_BUILD
+    COMMENT "Attempting to install cbindgen..."
+    COMMAND cargo install cbindgen || true
+    )
+
 add_custom_target(
     xxffi ALL
-    COMMENT "Compiling xxffi dependency"
+    COMMENT "Compiling xxffi dependency..."
+    DEPENDS install-cbindgen
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     COMMAND CARGO_TARGET_DIR=${DST_LIB_DIR} ${CARGO_CMD}
     )
