main.cpp: call Rust function

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -6,6 +6,16 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
+set(ROOT_BUILD_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..)
+
+include_directories(
+    ${ROOT_BUILD_DIRECTORY}
+    )
+
+link_directories(
+    ${ROOT_BUILD_DIRECTORY}/xxffi/debug/debug/
+    )
+
 set(
     ALL_FILES
     main.cpp
@@ -16,14 +26,17 @@ add_executable(
     ${ALL_FILES}
     )
 
-set(
-    ${ALL_LIBS}
+target_link_libraries(
+    gui
     Qt5::Widgets
     )
 
 target_link_libraries(
     gui
-    ${ALL_LIBS}
+    ${ROOT_BUILD_DIRECTORY}/xxffi/debug/debug/libxxffi.so
     )
 
-add_dependencies(gui xxffi)
+add_dependencies(
+    gui
+    xxffi
+    )
