--- a/xxffi/Cargo.toml
+++ b/xxffi/Cargo.toml
@@ -10,6 +10,5 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-serde = "1.0.104"
-serde_derive = "1.0.104"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.0"
